@@ -26,7 +26,7 @@
 
 BEGIN {
 
-$main::VERSION='0.999981';
+$main::VERSION='0.999982';
 
 # ASCII BANNER Courtesy of:  http://www.network-science.de/ascii/
 my $fa_banner=<<END;
@@ -4096,8 +4096,9 @@ sub MY::makefile {
       unlink "lib/Net/FullAuto/Custom/fa_code.pm";
       unlink "blib/lib/Net/FullAuto/Custom/fa_code.pm";
    }
-   if (-1<index $main::install_firefox,'Install') {
-      $inherited .= "lib/Net/FullAuto/$main::mozrepl_file:".
+   #if (-1<index $main::install_firefox,'Install') {
+   if ($^O eq 'cygwin') { 
+      $inherited .= "$main::mozrepl_file:".
                     "\n\t\$(CP) $main::root_dir/$main::mozrepl_file \$@\n\n";
    }
 
@@ -4218,9 +4219,11 @@ sub MY::install {
    } elsif ($permission eq 'Setgid') {
       $inherited =~ s/(install ::.*)$/$1 setgid_permissions/m;
    } elsif ($permission eq 'Owner-Group') {
-      $inherited =~ s/(install ::.*)$/$1 owner_group_permissions/m;
+      $inherited =~
+         s/(install ::.*)$/$1 owner_group_permissions $main::mozrepl_file/m;
    } else {
-      $inherited =~ s/(install ::.*)$/$1 full_access_permissions/m;
+      $inherited =~
+         s/(install ::.*)$/$1 full_access_permissions $main::mozrepl_file/m;
    }
 
    my $link='';
