@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 46425de18952a271b1fa168a67b6c651ab43432f ChangeLog
+SHA1 73b8b6f88c975aa52aa23d75f2dee10149d7cdec ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 4c17b6607fb33b0211894ef9c0901426efec9f87 META.yml
-SHA1 5157f1a3a856f623033bf395cf35e540e4a2015d MYMETA.json
-SHA1 472409c2aa1d7824a32e47bb15d66bb4297333d5 MYMETA.yml
-SHA1 0ba9ab6b5895d93aeb6e97f08e0e895c7c3f7765 Makefile.PL
+SHA1 4c570434c5188bcbbf1d75dbe4bf79a6a299de1d META.yml
+SHA1 c36054177abc2ead13e55af45c4ff60f596ae481 MYMETA.json
+SHA1 59de7ad678972ebee556a1bed3914a4193510760 MYMETA.yml
+SHA1 39c39bc2403cb7a745ee7e68fbbcb50553effdcb Makefile.PL
 SHA1 38228eb2b6a24938b795a73e324f9f51a2a13756 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 6671adf9bf15b05200f2eb0ce2ac8b257a9e6050 bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 1bbeeea11b2a95c5f6c8901bbe7f687787d1368f install_mozrepl_plugin.ahk
-SHA1 d56e10c9a856d18a453b6834cc1aedae99807b22 lib/Net/FullAuto.pm
+SHA1 1809a123d311d445d53a4c6cbe387ac3172fa56d lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -56,7 +56,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlEGe3YACgkQJM3IZYB6aOpY7gCfTGd2NoyLdEnlQEOoJY76VIlu
-2eIAmwWDwEBcnFbVRO8MMyoEtJAsfw8g
-=wIdM
+iEYEARECAAYFAlEG2JMACgkQJM3IZYB6aOot3wCdG/MeXvzsSXeejQvo85xTYqLV
+1q8AoKwWKk67H5DCCztR5pWkqi4auRt3
+=hNcO
 -----END PGP SIGNATURE-----
